<resources>
    <string name="app_name">Yumify</string>
    <string name="find_recipes_food_meals">Discover Food Recipes</string>
    <string name="sub_heading_welcome">Explore a variety of tasty recipes you can cook, enjoy, and share</string>
    <string name="explore">Explore</string>
    <string name="sign_to_explore">Sign to Explore</string>
    <string name="welcome_friend">Welcome Flavor</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="your_password">Your Password</string>
    <string name="not_have_account">Not have account?</string>
    <string name="create_account">Create Account.</string>
    <string name="descriptionimagebg1" />
    <string name="sign_in">Sign In</string>
    <string name="back_button_description" />
    <string name="your_email">Your Email</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="create_username">Create Your Username</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="john_doe">John Eng Doe</string>
    <string name="search">Search Recipe…</string>
    <string name="category">Category</string>
    <string name="category_1">Category 1</string>
    <string name="category_2">Category 2</string>
    <string name="category_3">Category 3</string>
    <string name="profile_image">Profile Image</string>
    <string name="recipe_name">Recpie Name</string>
    <string name="category_4">Category 4</string>
    <string name="this_is_a_image_recipe">This is a Image Recipe</string>
    <string name="favorit">Favorit</string>
    <string name="image_profile">Image Profile</string>
    <string name="email_input">Email Input</string>
    <string name="logout">Logout</string>
    <string name="register_account">Register Account</string>
    <string name="profile">Profile</string>
    <string name="add_profile_image_button">Add Profile Image Button</string>
    <string name="detail_recipe">Detail recipe</string>
    <string name="ingredient">Ingredient</string>
    <string name="instruction_meals">instruction Meals</string>
    <string name="ingredients">Ingredients</string>
    <string name="instruction_text">Instruction Body Text</string>
    <string name="ingredient_image">Ingredient_image</string>
    <string name="ingredient_text">Ingredient_text</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="item_categories_image">Item Categories Image</string>
    <string name="hr">|</string>
    <string name="mymenu">My Menu</string>
    <string name="add_menu">Add Menu</string>
    <string name="name">Name</string>
    <string name="no_picture">No Picture</string>
    <string name="cooking_time">Cooking Time</string>
    <string name="add_image">Add image</string>
    <string name="minutes">Minutes</string>
    <string name="save">Save</string>
    <string name="preparations">Preparations</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>