<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <View
        android:id="@+id/topBackground"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:background="#77ABF9"
        app:layout_constraintBottom_toTopOf="@+id/bottomSection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo_icons"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/topBackground" />

    <TextView
        android:id="@+id/textViewHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/welcome_friend"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_icons" />



    <LinearLayout
        android:id="@+id/bottomSection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/topBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textViewHeading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/sign_to_explore"
            android:textStyle="bold"
            android:textColor="#191C1B"
            android:textSize="20sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewHeading"
            app:layout_constraintWidth_max="360dp" />


        <!-- Email Text -->
        <TextView
            android:id="@+id/EmailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp" />

        <!-- Email Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EmailInputET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Text -->
        <TextView
            android:id="@+id/PasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!-- Password Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PasswordInputET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:hint="@string/your_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Create Account Link -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_have_account"
                android:textColor="#7C7D7C"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textLinkCreateAccount"
                android:textColor="#3F69FF"
                android:textSize="15sp"
                android:textStyle="normal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/create_account"/>
        </LinearLayout>

        <!-- Login Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_biru"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAllCaps="false" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
