<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8F4FA"
    android:orientation="vertical"
    android:name=".RegisterActivity">

    <ImageButton
        android:id="@+id/backButtonRegister"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:background="@null"
        android:contentDescription="@string/back_button_description"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintEnd_toStartOf="@+id/textViewHeading2"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textViewHeading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/register"
        android:textColor="#003366"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/EmailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/email"
        android:textColor="#003366"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewHeading2"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailInput"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/your_email"
        app:boxStrokeColor="#000000"
        app:boxBackgroundColor="#FFFFFF"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/EmailText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EmailInputET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="#002A5C"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/UsernameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/username"
        android:textColor="#003366"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EmailInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/UsernameInput"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/create_username"
        app:boxStrokeColor="#000000"
        app:boxBackgroundColor="#FFFFFF"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/UsernameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/UsernameInputET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="#002A5C"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/PasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/password"
        android:textColor="#003366"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/UsernameInput"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PasswordInput"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/new_password"
        app:boxStrokeColor="#000000"
        app:boxBackgroundColor="#FFFFFF"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/PasswordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PasswordInputET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="#002A5C"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/ConfirmPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/confirm_password"
        android:textColor="#003366"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PasswordInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ConfirmPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/confirm_password"
        app:boxStrokeColor="#000000"
        app:boxBackgroundColor="#FFFFFF"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/ConfirmPasswordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ConfirmPasswordInputET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="#002A5C"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_biru"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:stateListAnimator="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ConfirmPasswordInput" />

</androidx.constraintlayout.widget.ConstraintLayout>
