<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:elevation="4dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/backButtonProfile"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/gradient_toolbar"
            app:contentInsetEnd="16dp"
            app:contentInsetStart="16dp"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/profile"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Profile Image using normal ImageView -->
    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="292dp"
        android:layout_height="252dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/image_profile"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        app:layout_constraintTop_toBottomOf="@+id/AppBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="59dp" />


    <!-- User Info Card with Blue Color -->
    <androidx.cardview.widget.CardView
        android:id="@+id/UserInfoCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/blue_500"
        app:contentPadding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/UsernameInputView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/username"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="22sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="10dp"
                android:background="#ffffff" />

            <TextView
                android:id="@+id/EmailInputView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/email"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp" /> <!-- Adjusted text size for modern look -->

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="130dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_gradient"
        android:stateListAnimator="@null"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/UserInfoCardView"
        tools:ignore="TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="130dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/gradient_bottom_navigation"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@drawable/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
